--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.14.1",
     "@mui/material": "^7.3.6",
     "@mui/x-charts-pro": "^8.22.1",
+    "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-slot": "^1.1.2",
     "@types/styled-components": "^5.1.36",
     "class-variance-authority": "^0.7.1",
