fix: update railway config and start script for Nixpacks

--- a/railway.toml
+++ b/railway.toml
@@ -1,4 +1,5 @@
 [build]
-builder = "dockerfile"
-dockerfilePath = "Dockerfile"
-target = "production"
+builder = "nixpacks"
+
+[deploy]
+startCommand = "npx serve dist -s -l $PORT"
