--- a/package.json
+++ b/package.json
@@ -38,6 +38,6 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "start": "npx serve dist -l 3000"
+    "start": "npx serve dist -s -l ${PORT:-3000}"
   }
 }
