--- a/railway.toml
+++ b/railway.toml
@@ -1,5 +1,4 @@
 [build]
-builder = "nixpacks"
-
-[deploy]
-startCommand = "npx serve dist -s -l $PORT"
+builder = "dockerfile"
+dockerfilePath = "Dockerfile"
+target = "production"
